--- a/app/src/main/res/layout/content_video_view.xml
+++ b/app/src/main/res/layout/content_video_view.xml
@@ -14,4 +14,12 @@
         android:layout_height="match_parent"
         android:foregroundGravity="center"/>
 
+    <ProgressBar
+        app:layout_constraintTop_toBottomOf="@+id/video_view_recycler"
+        android:id="@+id/progress_loader_video"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
 </android.support.constraint.ConstraintLayout>
