--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorPrimary">#f2100c</color>
     <color name="colorPrimaryDark">#40000c</color>
     <color name="colorAccent">#FFF5F5F5</color>
+
+    <color name="failure">#ffff3333</color>
+    <color name="transparent">#00000000</color>
 </resources>
